unpackaged/main/default/objects/Contact/fields/Account_ICP_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_ICP_Type__c</fullName>
    <description>If the Account is tagged with &quot;24TA Manufacturing&quot; returns &quot;Manufacturing&quot;, otherwise returns the Account ICP Type value.

External Systems Utilization: Regie.ai</description>
    <formula>IF(INCLUDES(Account.Tags__c, &quot;24TA Manufacturing&quot;),&quot;Manufacturing&quot;, TEXT(Account.ICP_Type__c))</formula>
    <inlineHelpText>If the Account is tagged with &quot;24TA Manufacturing&quot; returns &quot;Manufacturing&quot;, otherwise returns the Account ICP Type value.</inlineHelpText>
    <label>Account ICP Type</label>
    <type>Text</type>
</CustomField>