unpackaged/main/default/objects/Contact/fields/Account_Status_Committed__c.field-meta.xml
<CustomField>
    <fullName>Account_Status_Committed__c</fullName>
    <description>Updated via Polytomic Contact Status sync..
Used to trigger updates to Contact Status when there are changes to the Account Status (Committed) field on the related Account.</description>
    <inlineHelpText>Updated via Polytomic Contact Status sync..
Used to trigger updates to Contact Status when there are changes to the Account Status (Committed) field on the related Account.</inlineHelpText>
    <label>Account Status (Committed)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>