unpackaged/main/default/objects/Contact/fields/Account_Status_Overall__c.field-meta.xml
<CustomField>
    <fullName>Account_Status_Overall__c</fullName>
    <description>Helper field that returns the `Account Status (Overall)` value from the Account.</description>
    <formula>Account.Account_Status__c</formula>
    <inlineHelpText>Helper field that returns the `Account Status (Overall)` value from the Account.</inlineHelpText>
    <label>Account Status (Overall)</label>
    <type>Text</type>
</CustomField>