unpackaged/main/default/objects/Contact/fields/Booking_Status_CP__c.field-meta.xml
<CustomField>
    <fullName>Booking_Status_CP__c</fullName>
    <description>Displays the most recent booking status from Chili Piper (Booked, Not Booked).

External Systems Utilization: Chili Piper</description>
    <inlineHelpText>Displays the most recent booking status from Chili Piper (Booked, Not Booked).</inlineHelpText>
    <label>Booking Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>