unpackaged/main/default/objects/Contact/fields/ChampifyIo__ChampifySyncReason__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__ChampifySyncReason__c</fullName>
    <label>Champify Sync Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>