unpackaged/main/default/objects/Contact/fields/ChampifyIo__EmployeeId__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__EmployeeId__c</fullName>
    <label>Champify Employee Id</label>
    <length>26</length>
    <type>Text</type>
</CustomField>