unpackaged/main/default/objects/Contact/fields/ChampifyIo__Past_Account__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__Past_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Champify Past Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Past Contacts</relationshipLabel>
    <relationshipName>PastContacts</relationshipName>
    <type>Lookup</type>
</CustomField>