unpackaged/main/default/objects/Contact/fields/ChampifyIo__Past_Title__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__Past_Title__c</fullName>
    <label>Champify Past Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>