unpackaged/main/default/objects/Contact/fields/ChampifyIo__Sync_with_Champify__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__Sync_with_Champify__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync with Champify</label>
    <type>Checkbox</type>
</CustomField>