unpackaged/main/default/objects/Contact/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <description>Primarily used in Chili Piper forms to store `Company Name` values. Alternative text field used due to standard Name field being a lookup relationship (Id type) that cannot be edited from a text company name value.

External Systems Utilization: Chili Piper</description>
    <inlineHelpText>Primarily used in Chili Piper forms to store `Company Name` values.</inlineHelpText>
    <label>Company</label>
    <type>TextArea</type>
</CustomField>