unpackaged/main/default/objects/Contact/fields/Contact_Cognism_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_Cognism_ID__c</fullName>
    <description>Cognism ID for Contact records updated by Cognism.

External Systems Utilization: Cognism</description>
    <inlineHelpText>Cognism ID for Contact records updated by Cognism.</inlineHelpText>
    <label>Contact Cognism ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>