unpackaged/main/default/objects/Contact/fields/Contact_Implied_Segment__c.field-meta.xml
<CustomField>
    <fullName>Contact_Implied_Segment__c</fullName>
    <description>Returns the applicable Segment from the Employee Picklist value submitted on the Demo Request form if the related Account Segment is NULL. Primarily used for Chili Piper routing.

External Systems Utilization: Chili Piper</description>
    <formula>IF(
  ISPICKVAL(Account.Segment__c,&quot;&quot;),
  CASE(Employee_Picklist__c,
   &quot;1-25&quot;,&quot;GRW&quot;,
   &quot;26-50&quot;,&quot;GRW&quot;,
   &quot;51-100&quot;,&quot;GRW&quot;,
   &quot;101-300&quot;,&quot;MMK&quot;,
   &quot;301-500&quot;,&quot;MMK&quot;,
   &quot;501-1,000&quot;,&quot;MMK&quot;,
   &quot;1,001-2,500&quot;,&quot;ENT&quot;,
   &quot;2,501-5,000&quot;, &quot;ENT&quot;,
   &quot;5,001+&quot;, &quot;ENT&quot;,
   &quot;2,500+&quot;,&quot;ENT&quot;,
   &quot;501-2,500&quot;,&quot;ENT&quot;,
   &quot;101-500&quot;,&quot;MMK&quot;,
   &quot;&quot;
  ),
  CASE(Account.Segment__c,
    &quot;EDU&quot;,&quot;ENT&quot;,
    &quot;GOV&quot;,&quot;ENT&quot;,
    &quot;STR&quot;,&quot;ENT&quot;,
    TEXT(Account.Segment__c)
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns the applicable Segment from the Employee Picklist value submitted on the Demo Request form if the related Account Segment is NULL. Primarily used for Chili Piper routing.</inlineHelpText>
    <label>Contact Implied Segment</label>
    <type>Text</type>
</CustomField>