unpackaged/main/default/objects/Contact/fields/Contact_Implied_Subteam__c.field-meta.xml
<CustomField>
    <fullName>Contact_Implied_Subteam__c</fullName>
    <description>Returns the applicable Subteam referencing the Contact Implied Segment and Implied Country values. Primarily used for Chili Piper routing.

External Systems Utilization: Chili Piper</description>
    <formula>IF(
 Contact_Implied_Segment__c=&quot;GRW&quot;,
 &quot;GRW&quot;,
 CASE(Contact_Implied_Country__c,
  &quot;Belgium&quot;,&quot;EUR&quot;,
  &quot;France&quot;,&quot;EUR&quot;,
  &quot;Germany&quot;,&quot;EUR&quot;,
  &quot;Ireland&quot;,&quot;EUR&quot;,
  &quot;Netherlands&quot;,&quot;EUR&quot;,
  &quot;United Kingdom&quot;,&quot;EUR&quot;,
  CASE(Contact_Implied_Segment__c,
   &quot;GRW&quot;,&quot;GRW&quot;,
   &quot;MMK&quot;,&quot;MMK&quot;,
   &quot;ENT&quot;,&quot;ENT&quot;,
   &quot;GOV&quot;,&quot;ENT&quot;,
   &quot;EDU&quot;,&quot;ENT&quot;,
   &quot;STR&quot;,&quot;ENT&quot;,
   &quot;&quot;
   )
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns the applicable Subteam referencing the Contact Implied Segment and Implied Country values. Primarily used for Chili Piper routing.</inlineHelpText>
    <label>Contact Implied Subteam</label>
    <type>Text</type>
</CustomField>