unpackaged/main/default/objects/Contact/fields/Contact_Notes__c.field-meta.xml
<CustomField>
    <fullName>Contact_Notes__c</fullName>
    <description>Multi-purpose text field used to store notes about the Contact (i.e. Opt In/Opt Out details)

External Systems Utilization:</description>
    <inlineHelpText>Multi-purpose text field used to store notes about the Contact (i.e. Opt In/Opt Out details)</inlineHelpText>
    <label>Contact Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>