unpackaged/main/default/objects/Contact/fields/Contact_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_Name__c</fullName>
    <description>Helper field that displays the Owner&#39;s full name as a text field.</description>
    <formula>Owner.FirstName&amp;&quot; &quot;&amp;Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Helper field that displays the Owner&#39;s full name as a text field.</inlineHelpText>
    <label>Contact Owner Name</label>
    <type>Text</type>
</CustomField>