unpackaged/main/default/objects/Contact/fields/Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status__c</fullName>
    <description>Status of a Contact that determines its marketing eligibility. Values are updated in real time by Polytomic.

(waterfall logic, each group would exclude those preceding)
- Disqualified: all contacts associated with competitors, Retool internal, test, junk
- Demand Suppressed: contact who is opt out, bounce, no longer at company, junk
- Committed Customer: all contacts at an account who is a committed customer
- Open Opportunity: all contacts at an account with any open or resting Opportunity
- Open Journey: any contact with an open or resting Journey, aka MQL
- Demand Marketable: any contact that’s opted into emails
- Demand Unmarketable: everyone else

External Systems Utilization: Polytomic</description>
    <inlineHelpText>This is the status of a Contact that determines its marketing eligibility.</inlineHelpText>
    <label>Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Demand Suppressed</fullName>
            </value>
            <value>
                <fullName>Committed Customer</fullName>
            </value>
            <value>
                <fullName>Open Opportunity</fullName>
            </value>
            <value>
                <fullName>Open Journey</fullName>
            </value>
            <value>
                <fullName>Demand Marketable</fullName>
            </value>
            <value>
                <fullName>Demand Unmarketable</fullName>
                <default>true</default>
                <label>Demand Unmarketable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>