unpackaged/main/default/objects/Contact/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>External Country picklist populated by Chili Piper bookings. Used as a fallback in `Contact Implied Country` if the Account Shipping Country value is NULL.

External Systems Utilization: Chili Piper</description>
    <inlineHelpText>External Country picklist populated by Chili Piper bookings. Used as a fallback in `Contact Implied Country` if the Account Shipping Country value is NULL.</inlineHelpText>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>