unpackaged/main/default/objects/Contact/fields/Current_Journey_Type__c.field-meta.xml
<CustomField>
    <fullName>Current_Journey_Type__c</fullName>
    <description>Returns the Current Open Journey Type. Created as a workaround for the 4/25 LeanData Incident

External Systems Utilization: LeanData.</description>
    <formula>Current_Open_Journey__r.Journey_Type__c</formula>
    <inlineHelpText>Returns the Current Open Journey Type. Created as a workaround for the 4/25 LeanData Incident.</inlineHelpText>
    <label>Current Journey Type</label>
    <type>Text</type>
</CustomField>