unpackaged/main/default/objects/Contact/fields/Current_Sequence_User_Role__c.field-meta.xml
<CustomField>
    <fullName>Current_Sequence_User_Role__c</fullName>
    <formula>TEXT(Outreach_Current_Sequence_User_ID__r.Team__c)</formula>
    <label>Current Sequence User Team</label>
    <type>Text</type>
</CustomField>