unpackaged/main/default/objects/Contact/fields/DOZISF__ZoomInfo_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__ZoomInfo_Company_ID__c</fullName>
    <label>ZoomInfo Company ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>