unpackaged/main/default/objects/Contact/fields/DOZISF__ZoomInfo_Enrich_Status__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__ZoomInfo_Enrich_Status__c</fullName>
    <label>ZoomInfo Enrich Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enriched</fullName>
            </value>
            <value>
                <fullName>No Match</fullName>
            </value>
            <value>
                <fullName>Company Enriched Only</fullName>
            </value>
            <value>
                <fullName>Not Enriched - Not Under Management</fullName>
            </value>
            <value>
                <fullName>Error Occurred in Scheduled Enrich</fullName>
            </value>
            <value>
                <fullName>Error Occurred in Instant Enrich</fullName>
            </value>
            <value>
                <fullName>Insufficient Credits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>