unpackaged/main/default/objects/Contact/fields/Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>Email_Domain__c</fullName>
    <description>Isolated Email domain parsed from the Contact&#39;s Email address.</description>
    <inlineHelpText>Isolated Email domain parsed from the Contact&#39;s Email address.</inlineHelpText>
    <label>Email Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>