unpackaged/main/default/objects/Contact/fields/Email_Domain_Map__c.field-meta.xml
<CustomField>
    <fullName>Email_Domain_Map__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relationship to the Domain Map record associated with the Contact&#39;s `Email Domain`.</description>
    <inlineHelpText>Lookup relationship to the Domain Map record associated with the Contact&#39;s `Email Domain`.</inlineHelpText>
    <label>Email Domain Map</label>
    <referenceTo>Domain_Map__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>