unpackaged/main/default/objects/Contact/fields/Email_Domain_Type_Mismatch__c.field-meta.xml
<CustomField>
    <fullName>Email_Domain_Type_Mismatch__c</fullName>
    <description>Checked TRUE if the Contact `Email_Domain_Type__c` does not align with the lookup relationship `Email_Domain_Map__r.Type__c` value.</description>
    <formula>ISBLANK(Email_Domain_Map__c) 
||
(NOT(ISBLANK(Email_Domain_Map__c)) &amp;&amp; TEXT(Email_Domain_Map__r.Type__c)!=TEXT(Email_Domain_Type__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked TRUE if the Contact `Email_Domain_Type__c` does not align with the lookup relationship `Email_Domain_Map__r.Type__c` value.</inlineHelpText>
    <label>Email Domain Type Mismatch?</label>
    <type>Checkbox</type>
</CustomField>