unpackaged/main/default/objects/Contact/fields/Email_Opt_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_Out_Date__c</fullName>
    <description>Global opt out date stamp of when a prospect opted out of all forms of email communication (product, marketing, sales).</description>
    <inlineHelpText>Global opt out date stamp of when a prospect opted out of all forms of email communication (product, marketing, sales).</inlineHelpText>
    <label>Email Opt Out Date</label>
    <type>Date</type>
</CustomField>