unpackaged/main/default/objects/Contact/fields/Enriched_At__c.field-meta.xml
<CustomField>
    <fullName>Enriched_At__c</fullName>
    <description>Timestamp of when the following fields were last updated:
- Enriched Company Name
- Enriched Company Website
- Enriched Company Employees</description>
    <inlineHelpText>Timestamp of when the following fields were last updated:
- Enriched Company Name
- Enriched Company Website
- Enriched Company Employees</inlineHelpText>
    <label>Enriched At</label>
    <type>DateTime</type>
</CustomField>