unpackaged/main/default/objects/Contact/fields/Enriched_By__c.field-meta.xml
<CustomField>
    <fullName>Enriched_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the user who manually enriched the following fields on the contact record:
- Enriched Company Name
- Enriched Company Website
- Enriched Company Employees</description>
    <inlineHelpText>Name of the user who manually enriched the following fields on the contact record:
- Enriched Company Name
- Enriched Company Website
- Enriched Company Employees</inlineHelpText>
    <label>Enriched By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>