unpackaged/main/default/objects/Contact/fields/Enriched_Company_Employees__c.field-meta.xml
<CustomField>
    <fullName>Enriched_Company_Employees__c</fullName>
    <description>Manually enriched company employees.</description>
    <inlineHelpText>Manually enriched company employees.</inlineHelpText>
    <label>Enriched Company Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>