unpackaged/main/default/objects/Contact/fields/Enriched_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Enriched_Company_Name__c</fullName>
    <description>Manually enriched company name.</description>
    <inlineHelpText>Manually enriched company name.</inlineHelpText>
    <label>Enriched Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>