unpackaged/main/default/objects/Contact/fields/Enriched_Company_Website__c.field-meta.xml
<CustomField>
    <fullName>Enriched_Company_Website__c</fullName>
    <description>Manually enriched website.</description>
    <inlineHelpText>Manually enriched website.</inlineHelpText>
    <label>Enriched Company Website</label>
    <type>Url</type>
</CustomField>