unpackaged/main/default/objects/Contact/fields/Enriched_LinkedIn_Company_Profile__c.field-meta.xml
<CustomField>
    <fullName>Enriched_LinkedIn_Company_Profile__c</fullName>
    <description>Used to manually enrich company information on a Contact record.

External Systems Utilization: LeadGenius</description>
    <label>Enriched LinkedIn Company Profile</label>
    <type>Url</type>
</CustomField>