unpackaged/main/default/objects/Contact/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <description>Role of the Contact, derived from the `Title` value.</description>
    <inlineHelpText>Role of the Contact, derived from the `Title` value.</inlineHelpText>
    <label>Function</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contact_Function</valueSetName>
    </valueSet>
</CustomField>