unpackaged/main/default/objects/Contact/fields/Gong__Active_Engage_Flow_Names__c.field-meta.xml
<CustomField>
    <fullName>Gong__Active_Engage_Flow_Names__c</fullName>
    <label>Active Engage Flow Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>