unpackaged/main/default/objects/Contact/fields/Gong__Current_Flow_Status__c.field-meta.xml
<CustomField>
    <fullName>Gong__Current_Flow_Status__c</fullName>
    <label>Current Flow Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>