unpackaged/main/default/objects/Contact/fields/Gong__Current_Flow_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Gong__Current_Flow_User_Name__c</fullName>
    <label>Added to Engage Flow By</label>
    <length>80</length>
    <type>Text</type>
</CustomField>