unpackaged/main/default/objects/Contact/fields/Gong__Flow_Status__c.field-meta.xml
<CustomField>
    <fullName>Gong__Flow_Status__c</fullName>
    <label>Engage Flow Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Finished (replied)</fullName>
            </value>
            <value>
                <fullName>Finished (no reply)</fullName>
            </value>
            <value>
                <fullName>Finished (meeting booked)</fullName>
            </value>
            <value>
                <fullName>Finished (removed manually)</fullName>
            </value>
            <value>
                <fullName>Bounced</fullName>
            </value>
            <value>
                <fullName>Removed (other)</fullName>
            </value>
            <value>
                <fullName>To-do expired</fullName>
            </value>
            <value>
                <fullName>No license</fullName>
            </value>
            <value>
                <fullName>Person deleted</fullName>
            </value>
            <value>
                <fullName>Flow deleted</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Opted Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>