unpackaged/main/default/objects/Contact/fields/Gong__Number_of_Active_Engage_Flows__c.field-meta.xml
<CustomField>
    <fullName>Gong__Number_of_Active_Engage_Flows__c</fullName>
    <label>Number of Active Engage Flows</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>