unpackaged/main/default/objects/Contact/fields/Hubspot_Hard_bounce_email_reason__c.field-meta.xml
<CustomField>
    <fullName>Hubspot_Hard_bounce_email_reason__c</fullName>
    <description>Captures the value from Hubspot&#39;s &#39;Hard bounce reason&#39; when an email is bounced.

External Systems Utilization: Hubspot</description>
    <label>Hubspot Hard Bounce Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Mailbox Full</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Policy</fullName>
            </value>
            <value>
                <fullName>Spam</fullName>
            </value>
            <value>
                <fullName>Unknown User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>