unpackaged/main/default/objects/Contact/fields/Initial_Sequence_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Sequence_Date__c</fullName>
    <description>Date of when the first Outreach Sequence was initiated. 

External Systems Utilization: Outreach</description>
    <inlineHelpText>Date of when the first Outreach Sequence was initiated.</inlineHelpText>
    <label>Initial Sequence Date</label>
    <type>Date</type>
</CustomField>