unpackaged/main/default/objects/Contact/fields/Invalid_Contact_Owner__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Contact_Owner__c</fullName>
    <description>TRUE if the contact owner is not any of the associated account&#39;s Owner, SDR, Technical Account Manager, Professional Services or Executive Sponsor, and not last modified by LeanData Integration user (005Du000000JCtnIAG). Referenced by Polytomic to mass correct Contact owners. 

External Systems Utilization: Polytomic</description>
    <formula>(
OwnerId != Account.Sales_Development_Representative__c &amp;&amp;
NOT(ISBLANK(Account.Sales_Development_Representative__c)) &amp;&amp;
OwnerId = &#39;0055A00000BExg9&#39;
)
||
(
OwnerId != Account.Owner.Id &amp;&amp;
OwnerId != Account.Sales_Development_Representative__c &amp;&amp;
OwnerId != Account.Executive_Sponsor__c &amp;&amp;
OwnerId != Account.Technical_Account_Manager__c &amp;&amp;
OwnerId != Account.Professional_Services__c &amp;&amp;
LastModifiedById != &#39;005Du000000JCtn&#39;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>TRUE if the contact owner is not any of the associated account&#39;s Owner, SDR, Technical Account Manager, Professional Services or Executive Sponsor, and not last modified by LeanData Integration user (005Du000000JCtnIAG).</inlineHelpText>
    <label>Invalid Contact Owner</label>
    <type>Checkbox</type>
</CustomField>