unpackaged/main/default/objects/Contact/fields/Invalid_Emails__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Emails__c</fullName>
    <description>Concatenated list of invalid emails, populated when logged email activity bounces.</description>
    <inlineHelpText>Concatenated list of invalid emails, populated when logged email activity bounces.</inlineHelpText>
    <label>Invalid Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>