unpackaged/main/default/objects/Contact/fields/LeanData__LD_Segment__c.field-meta.xml
<CustomField>
    <fullName>LeanData__LD_Segment__c</fullName>
    <label>LD Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>