unpackaged/main/default/objects/Contact/fields/LG_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>LG_Last_Updated__c</fullName>
    <description>Most recent record updated date by LeadGenius</description>
    <inlineHelpText>Most recent record updated date by LeadGenius</inlineHelpText>
    <label>LG: Last Updated</label>
    <type>Date</type>
</CustomField>